@@ -1,5 +1,6 @@
 Revision history for File::DataClass
 
+         - Renamed ::Element to ::Result
          - Added UnixAuth::Resultset
          - Exposed more resultset methods
          - Added support for passwd and group files
